# asciigpt

./: .env.example  .gitignore  MISSION.md  README.md  directions-fork-2026-05-19.md  generate.py  pipeline.md  pyproject.toml  requirements-dev.txt  requirements.txt  research.md  tasks.md
.github/workflows/: tests.yml
asciigpt/: __init__.py  __main__.py  cli.py  convert.py  dither.py  edges.py  figlet.py  generate.py  gradients.py  preprocess.py  render.py
docs/: FABLE-DIRECTION-2026-06-12.md  byo-ai.md
docs/handoffs/: buildout-goal-2026-05-28.md  generative-revival-2026-06-02.md  next-steps-2026-06-02.md
examples/: banner.txt  house.html  house_edges.txt  house_ramp.txt  make_examples.py  prompt_house_edges.txt  prompt_sphere.txt  sphere.txt  sphere_blocks.txt
scripts/backends/: openai_image.py
tests/: _fixtures.py  conftest.py  test_cli.py  test_dither.py  test_edges.py  test_generate.py  test_glyph_mapping.py  test_gradients.py  test_render.py
