[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asciigpt"
dynamic = ["version"]
description = "Generate ASCII art from a text prompt, or convert an image — a real, local CLI ASCII-art tool."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ray Weiss" }]
keywords = ["ascii", "ascii-art", "image-to-ascii", "cli", "generator", "art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=9.1.0",
    "pyfiglet>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
asciigpt = "asciigpt.cli:main"

[project.urls]
Homepage = "https://github.com/lerugray/asciigpt"
Repository = "https://github.com/lerugray/asciigpt"
Issues = "https://github.com/lerugray/asciigpt/issues"

[tool.setuptools]
packages = ["asciigpt"]

[tool.setuptools.dynamic]
version = { attr = "asciigpt.__version__" }
